--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
     <modules>
         <module>spring-cloud-learn-eureka-server</module>
         <module>spring-cloud-learn-eureka-client</module>
+        <module>spring-cloud-learn-ribbon</module>
+        <module>spring-cloud-learn-user</module>
+        <module>spring-cloud-learn-common</module>
     </modules>
 
     <properties>
