--- a/spring-cloud-learn-eureka-server/pom.xml
+++ b/spring-cloud-learn-eureka-server/pom.xml
@@ -8,6 +8,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <packaging>jar</packaging>
 
     <artifactId>spring-cloud-learn-eureka-server</artifactId>
 
@@ -41,6 +42,5 @@
             </plugin>
         </plugins>
     </build>
-
 
 </project>
