--- a/spring-cloud-learn-user/spring-cloud-learn-user-mapper/pom.xml
+++ b/spring-cloud-learn-user/spring-cloud-learn-user-mapper/pom.xml
@@ -3,14 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>spring-cloud-learn</artifactId>
+        <artifactId>spring-cloud-learn-user</artifactId>
         <groupId>com.shanshan</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
 
-    <artifactId>spring-cloud-learn-eureka-client</artifactId>
+    <artifactId>spring-cloud-learn-user-mapper</artifactId>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -19,20 +19,10 @@
     </properties>
 
     <dependencies>
-        <!-- spring boot web 模块 dependency-->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
-        
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <artifactId>spring-cloud-learn-user-common</artifactId>
+            <groupId>com.shanshan</groupId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
@@ -53,4 +43,6 @@
             </plugin>
         </plugins>
     </build>
+
+
 </project>
