--- a/spring-cloud-learn-eureka-client/pom.xml
+++ b/spring-cloud-learn-eureka-client/pom.xml
@@ -19,21 +19,23 @@
     </properties>
 
     <dependencies>
-        <!-- spring boot web 模块 dependency-->
+        
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <artifactId>spring-cloud-learn-user-microservice-api</artifactId>
+            <groupId>com.shanshan</groupId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <!-- 依赖 Spring Cloud Netflix Hystrix -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
         </dependency>
-        
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
+        
     </dependencies>
 
     <build>
