--- a/spring-cloud-learn-user/spring-cloud-learn-user-microservice-api/pom.xml
+++ b/spring-cloud-learn-user/spring-cloud-learn-user-microservice-api/pom.xml
@@ -23,6 +23,10 @@
             <groupId>com.shanshan</groupId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
     </dependencies>
     
     <build>
