--- a/spring-cloud-learn-user/spring-cloud-learn-user-microservice-server/src/main/resources/application.yml
+++ b/spring-cloud-learn-user/spring-cloud-learn-user-microservice-server/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   profiles:
     active: dev
   application:
-    name: spring-cloud-learn-user-microservice-provider
+    name: spring-cloud-learn-user-microservice-server-provider
 ---
 server:
   port: 10000
@@ -13,6 +13,19 @@ spring:
     username: "root"
     password: "123456"
     driver-class-name: com.mysql.cj.jdbc.Driver
-
 mybatis:
   mapper-locations: "classpath:mapper/*.xml"
+eureka:
+  client:
+    service-url:
+      # 注册到注册中心
+      defaultZone: http://localhost:8000/eureka/,http://localhost:8001/eureka/,http://localhost:8002/eureka/
+    registry-fetch-interval-seconds: 10
+  instance:
+    hostname: localhost
+    prefer-ip-address: true
+    instance-id: ${spring.cloud.client.ip-address}:${server.port}
+management:
+  endpoint:
+    health:
+      show-details: always
