--- a/spring-cloud-learn-zuul/pom.xml
+++ b/spring-cloud-learn-zuul/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>spring-cloud-learn-user</artifactId>
+        <artifactId>spring-cloud-learn</artifactId>
         <groupId>com.shanshan</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>spring-cloud-learn-user-microservice-impl</artifactId>
+    <artifactId>spring-cloud-learn-zuul</artifactId>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -19,23 +19,15 @@
 
     <dependencies>
         <dependency>
-            <artifactId>spring-cloud-learn-user-microservice-api</artifactId>
-            <groupId>com.shanshan</groupId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <!-- 依赖 Spring Cloud Netflix Hystrix -->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
-        </dependency>
-        <!-- 依赖 Spring Cloud eureka client -->
-        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
+        </dependency>
     </dependencies>
-    
+
     <build>
         <plugins>
             <plugin>
