--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,6 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-dependencies</artifactId>
-        <version>2.1.4.RELEASE</version>
-    </parent>
 
     <groupId>com.shanshan</groupId>
     <artifactId>spring-cloud-learn</artifactId>
@@ -20,6 +15,7 @@
         <module>spring-cloud-learn-ribbon</module>
         <module>spring-cloud-learn-user</module>
         <module>spring-cloud-learn-zuul</module>
+        <module>spring-cloud-learn-getway</module>
     </modules>
 
     <properties>
@@ -32,13 +28,13 @@
 
     <dependencyManagement>
         <dependencies>
-<!--            <dependency>
+            <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
                 <version>${springboot.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
-            </dependency>-->
+            </dependency>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
