--- a/spring-cloud-learn-eureka-server/pom.xml
+++ b/spring-cloud-learn-eureka-server/pom.xml
@@ -11,8 +11,10 @@
     <packaging>jar</packaging>
 
     <artifactId>spring-cloud-learn-eureka-server</artifactId>
+    <name>spring-cloud-learn-eureka-server</name>
 
     <properties>
+        <docker.image.prefix>spring-cloud-learn</docker.image.prefix>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
@@ -40,6 +42,7 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+
         </plugins>
     </build>
 
