添加Dockerfile docker-compose.yml 及环境变量文件 .env

--- a/spring-cloud-learn-eureka-server/Dockerfile
+++ b/spring-cloud-learn-eureka-server/Dockerfile
@@ -1,5 +1,5 @@
 FROM java:8
 EXPOSE 8080
 ARG JAR_FILE
-ADD target/${JAR_FILE} /spring-cloud-learn-eureka-server.jar
-ENTRYPOINT ["java", "-jar","/spring-cloud-learn-eureka-server.jar"]
+ADD target/${JAR_FILE} /eureka-server.jar
+ENTRYPOINT ["java", "-jar","/eureka-server.jar"]
