--- a/spring-cloud-learn-eureka-client/src/main/resources/application.yml
+++ b/spring-cloud-learn-eureka-client/src/main/resources/application.yml
@@ -12,7 +12,7 @@ eureka:
   client:
     service-url:
       # 注册到注册中心
-      defaultZone: http://localhost:8000/eureka/,http://localhost:8001/eureka/,http://localhost:8002/eureka/
+      defaultZone: http://192.168.137.1:8000/eureka/,http://192.168.137.1:8001/eureka/,http://192.168.137.1:8002/eureka/
     registry-fetch-interval-seconds: 10
   instance:
     hostname: localhost
