--- a/spring-cloud-learn-eureka-server/src/main/resources/application.yml
+++ b/spring-cloud-learn-eureka-server/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://192.168.137.100:8761/eureka/
 ---
 server:
   port: 8000
@@ -14,7 +14,7 @@ eureka:
   client:
     service-url:
       #服务注册
-      defaultZone: http://localhost:8001/eureka/,http://localhost:8002/eureka/
+      defaultZone: http://192.168.137.100:8001/eureka/,http://192.168.137.100:8002/eureka/
   instance:
     hostname: localhost
     prefer-ip-address: true
@@ -28,7 +28,7 @@ eureka:
   client:
     service-url:
       #服务注册
-      defaultZone: http://localhost:8000/eureka/,http://localhost:8002/eureka/
+      defaultZone: http://192.168.137.100:8000/eureka/,http://192.168.137.100:8002/eureka/
   instance:
     hostname: localhost
     prefer-ip-address: true
@@ -42,7 +42,7 @@ eureka:
   client:
     service-url:
       #服务注册
-      defaultZone: http://localhost:8000/eureka/,http://localhost:8001/eureka/
+      defaultZone: http://192.168.137.100:8000/eureka/,http://192.168.137.100:8001/eureka/
   instance:
     hostname: localhost
     prefer-ip-address: true
