--- a/spring-cloud-learn-getway/src/main/resources/application.yml
+++ b/spring-cloud-learn-getway/src/main/resources/application.yml
@@ -18,7 +18,7 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8000/eureka/,http://localhost:8001/eureka/,http://localhost:8002/eureka/
+      defaultZone: http://192.168.137.1:8000/eureka/,http://192.168.137.1:8001/eureka/,http://192.168.137.1:8002/eureka/
   instance:
     hostname: localhost
     prefer-ip-address: true
