--- a/spring-cloud-learn-ribbon/src/main/resources/application.yml
+++ b/spring-cloud-learn-ribbon/src/main/resources/application.yml
@@ -12,7 +12,7 @@ eureka:
   client:
     service-url:
       #服务注册
-      defaultZone: http://localhost:8000/eureka/,http://localhost:8001/eureka/,http://localhost:8002/eureka/
+      defaultZone: http://192.168.137.1:8000/eureka/,http://192.168.137.1:8001/eureka/,http://192.168.137.1:8002/eureka/
   instance:
     hostname: localhost
     prefer-ip-address: true
