--- a/spring-cloud-learn-user/spring-cloud-learn-user-microservice-server/src/main/resources/application.yml
+++ b/spring-cloud-learn-user/spring-cloud-learn-user-microservice-server/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   application:
     name: spring-cloud-learn-user-microservice-server-provider
 server:
-  port: 10000
+  port: 8080
 ---
 spring:
   profiles: dev
@@ -33,6 +33,80 @@ eureka:
     service-url:
       # 注册到注册中心
       defaultZone: http://localhost:8000/eureka/,http://localhost:8001/eureka/,http://localhost:8002/eureka/
+    registry-fetch-interval-seconds: 10
+  instance:
+    hostname: localhost
+    prefer-ip-address: true
+    instance-id: ${spring.cloud.client.ip-address}:${server.port}
+management:
+  endpoint:
+    health:
+      show-details: always
+---
+spring:
+  profiles: test
+  datasource:
+    master:
+      jdbc-url: jdbc:mysql://192.168.137.100:3306/nahsshan
+      username: root
+      password: "123456"
+      driver-class-name: com.mysql.cj.jdbc.Driver
+    # 只读账户
+    slave1:
+      jdbc-url: jdbc:mysql://192.168.137.100:3306/nahsshan
+      username: root
+      password: "123456"
+      driver-class-name: com.mysql.cj.jdbc.Driver
+    # 只读账户
+    slave2:
+      jdbc-url: jdbc:mysql://192.168.137.100:3306/nahsshan
+      username: root
+      password: "123456"
+      driver-class-name: com.mysql.cj.jdbc.Driver
+#mybatis:
+#  mapper-locations: "classpath:mapper/*.xml"
+eureka:
+  client:
+    service-url:
+      # 注册到注册中心
+      defaultZone: http://192.168.137.100:8000/eureka/,http://192.168.137.100:8001/eureka/,http://192.168.137.100:8002/eureka/
+    registry-fetch-interval-seconds: 10
+  instance:
+    hostname: localhost
+    prefer-ip-address: true
+    instance-id: ${spring.cloud.client.ip-address}:${server.port}
+management:
+  endpoint:
+    health:
+      show-details: always
+---
+spring:
+  profiles: prd
+  datasource:
+    master:
+      jdbc-url: jdbc:mysql://192.168.137.100:3306/nahsshan
+      username: root
+      password: "123456"
+      driver-class-name: com.mysql.cj.jdbc.Driver
+    # 只读账户
+    slave1:
+      jdbc-url: jdbc:mysql://192.168.137.100:3306/nahsshan
+      username: root
+      password: "123456"
+      driver-class-name: com.mysql.cj.jdbc.Driver
+    # 只读账户
+    slave2:
+      jdbc-url: jdbc:mysql://192.168.137.100:3306/nahsshan
+      username: root
+      password: "123456"
+      driver-class-name: com.mysql.cj.jdbc.Driver
+#mybatis:
+#  mapper-locations: "classpath:mapper/*.xml"
+eureka:
+  client:
+    service-url:
+      # 注册到注册中心
+      defaultZone: http://192.168.137.100:8000/eureka/,http://192.168.137.100:8001/eureka/,http://192.168.137.100:8002/eureka/
     registry-fetch-interval-seconds: 10
   instance:
     hostname: localhost
