--- a/spring-cloud-learn-user/spring-cloud-learn-user-microservice-server/src/main/resources/application.yml
+++ b/spring-cloud-learn-user/spring-cloud-learn-user-microservice-server/src/main/resources/application.yml
@@ -30,6 +30,8 @@ spring:
     nacos:
       discovery:
         server-addr: 192.168.137.100:8848,192.168.137.100:8849,192.168.137.100:8850
+        metadata:
+          version: 1.0.0
 #mybatis:
 #  mapper-locations: "classpath:mapper/*.xml"
 # 使用Eureka服务注册中心
