--- a/spring-cloud-learn-eureka-client/pom.xml
+++ b/spring-cloud-learn-eureka-client/pom.xml
@@ -21,7 +21,7 @@
     <dependencies>
         
         <dependency>
-            <artifactId>spring-cloud-learn-user-microservice-api</artifactId>
+            <artifactId>spring-cloud-learn-user-common</artifactId>
             <groupId>com.shanshan</groupId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
@@ -31,10 +31,12 @@
             <!--<groupId>org.springframework.cloud</groupId>-->
             <!--<artifactId>spring-cloud-starter-netflix-hystrix</artifactId>-->
         <!--</dependency>-->
+        <!-- Eureka注册中心 -->
         <!--<dependency>-->
             <!--<groupId>org.springframework.cloud</groupId>-->
             <!--<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>-->
         <!--</dependency>-->
+        <!-- Nacos注册中心  -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
@@ -43,6 +45,17 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-alibaba-sentinel</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-datasource-nacos</artifactId>
+            <version>1.6.2</version>
         </dependency>
         
     </dependencies>
