--- a/spring-cloud-learn-eureka-client/src/main/resources/application.yml
+++ b/spring-cloud-learn-eureka-client/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        namespace: 76c05fec-31cb-4c9d-a97b-cbabbbb7c56b
+        namespace: 7acc1bdb-904b-4c76-879c-098a35626c54
         server-addr: 192.168.137.100:8848,192.168.137.100:8849,192.168.137.100:8850
         metadata:
           target-version: 1.0.0
@@ -33,3 +33,6 @@ management:
 user:
   service:
     name: spring-cloud-learn-user-microservice-server-provider
+feign:
+  sentinel:
+    enabled: true
