--- a/spring-cloud-learn-user/spring-cloud-learn-user-microservice-server/pom.xml
+++ b/spring-cloud-learn-user/spring-cloud-learn-user-microservice-server/pom.xml
@@ -26,11 +26,6 @@
             <groupId>com.shanshan</groupId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <!-- 依赖 Spring Cloud Netflix Hystrix -->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
-        </dependency>
         <!-- 依赖 Spring Cloud eureka client -->
         <!--<dependency>-->
             <!--<groupId>org.springframework.cloud</groupId>-->
@@ -45,6 +40,25 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
+
+        <!-- sentinel  -->
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-alibaba-sentinel</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-datasource-nacos</artifactId>
+            <version>1.6.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
