README 完善信息 1、Nacos 配置中心namespace、dataId、group配置规范 2、Sentinel 在Nacos中的策略配置规范

--- a/spring-cloud-learn-user/spring-cloud-learn-user-microservice-server/src/main/resources/bootstrap.yml
+++ b/spring-cloud-learn-user/spring-cloud-learn-user-microservice-server/src/main/resources/bootstrap.yml
@@ -11,10 +11,13 @@ spring:
   cloud:
     nacos:
       config:
-        file-extension: yml
         server-addr: 192.168.137.100:8848,192.168.137.100:8849,192.168.137.100:8850
-        namespace: 76c05fec-31cb-4c9d-a97b-cbabbbb7c56b
+        namespace: 7acc1bdb-904b-4c76-879c-098a35626c54
         ext-config[0]:
-          data-id: user-application.yml
+          data-id: ${spring.application.name}.yml
+          group: ${spring.application.name}
+          refresh: true
+        ext-config[1]:
+          data-id: ${spring.application.name}-mysql.yml
           group: ${spring.application.name}
           refresh: true
