redisson 整合 redis sentinel

--- a/spring-cloud-learn-user/spring-cloud-learn-user-microservice-server/pom.xml
+++ b/spring-cloud-learn-user/spring-cloud-learn-user-microservice-server/pom.xml
@@ -42,7 +42,6 @@
         </dependency>
 
         <!-- sentinel  -->
-
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
@@ -57,6 +56,11 @@
             <groupId>com.alibaba.csp</groupId>
             <artifactId>sentinel-datasource-nacos</artifactId>
             <version>1.6.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
 
     </dependencies>
