Gateway 整合 Alibaba Sentinel 限流，使用 nacos 配置限流策略 连接 sentinel-dashboard

--- a/spring-cloud-learn-gateway/pom.xml
+++ b/spring-cloud-learn-gateway/pom.xml
@@ -9,10 +9,22 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>spring-cloud-learn-getway</artifactId>
+    <artifactId>spring-cloud-learn-gateway</artifactId>
 
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-gateway</artifactId>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version>
+            <scope>provided</scope>
+        </dependency>
+
         <!-- 将微服务provider侧注册进eureka -->
         <!--<dependency>-->
             <!--<groupId>org.springframework.cloud</groupId>-->
@@ -23,14 +35,28 @@
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.alibaba.csp</groupId>
             <artifactId>sentinel-spring-cloud-gateway-adapter</artifactId>
             <version>1.6.2</version>
         </dependency>
+
+        <!-- sentinel  -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-gateway</artifactId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-datasource-nacos</artifactId>
+            <version>1.6.2</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
@@ -40,7 +66,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
                     <!-- 指定该Main Class为全局的唯一入口 -->
-                    <mainClass>com.nahsshan.getway.GetwayApplication</mainClass>
+                    <mainClass>com.nahsshan.gateway.GatewayApplication</mainClass>
                     <layout>ZIP</layout>
                 </configuration>
                 <executions>
