--- a/spring-cloud-learn-user/spring-cloud-learn-user-microservice-server/src/main/resources/bootstrap.yml
+++ b/spring-cloud-learn-user/spring-cloud-learn-user-microservice-server/src/main/resources/bootstrap.yml
@@ -26,6 +26,9 @@ spring:
           data-id: ${spring.application.name}-redis.yml
           group: ${spring.application.name}
           refresh: true
+    sentinel:
+      transport:
+        dashboard:
 ---
 spring:
   profiles: prd
