--- a/spring-cloud-learn-common/pom.xml
+++ b/spring-cloud-learn-common/pom.xml
@@ -89,6 +89,10 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
 
     </dependencies>
 
