--- a/spring-cloud-learn-gateway/src/main/resources/bootstrap.yml
+++ b/spring-cloud-learn-gateway/src/main/resources/bootstrap.yml
@@ -5,6 +5,44 @@ spring:
     active: dev
   application:
     name: spring-cloud-learn-gateway
+logging:
+  level:
+    org.springframework.cloud.gateway: debug
+management:
+  endpoint:
+    health:
+      show-details: always
+---
+spring:
+  profiles: test
+  cloud:
+    gateway:
+      discovery:
+        locator:
+          enabled: true
+          lower-case-service-id: true
+    nacos:
+      discovery:
+        namespace: 2a5d3ccd-d57a-4ef2-b702-60f7b2ba510b
+        server-addr: 127.0.0.1:8848
+      config:
+        file-extension: yml
+        server-addr: 127.0.0.1:8848
+        namespace: 2a5d3ccd-d57a-4ef2-b702-60f7b2ba510b
+        group: ${spring.application.name}
+        prefix: ${spring.application.name}
+        refresh-enabled: true
+    sentinel:
+      transport:
+        dashboard: 192.168.137.100:7200
+      datasource:
+        ds:
+          nacos:
+            namespace: 2a5d3ccd-d57a-4ef2-b702-60f7b2ba510b
+            server-addr: 127.0.0.1:8848
+            dataId: gateway-sentinel.json
+            groupId: ${spring.application.name}
+            ruleType: flow
 ---
 spring:
   profiles: dev
@@ -14,7 +52,7 @@ spring:
         file-extension: yaml
         server-addr: 192.168.137.100:8848,192.168.137.100:8849,192.168.137.100:8850
         namespace: 76c05fec-31cb-4c9d-a97b-cbabbbb7c56b
-        ext-config[0]:
+        extension-configs[0]:
           data-id: ${spring.application.name}.yml
           group: ${spring.application.name}
           refresh: true
