--- a/spring-cloud-learn-user/spring-cloud-learn-user-microservice-server/src/main/resources/bootstrap.yml
+++ b/spring-cloud-learn-user/spring-cloud-learn-user-microservice-server/src/main/resources/bootstrap.yml
@@ -7,46 +7,34 @@ logging:
   config: classpath:logback.xml
 ---
 spring:
-  profiles: dev
+  profiles: test
   cloud:
     nacos:
       config:
         file-extension: yaml
-        server-addr: 192.168.137.100:8848,192.168.137.100:8849,192.168.137.100:8850
-        namespace: 7acc1bdb-904b-4c76-879c-098a35626c54
-        ext-config[0]:
-          data-id: ${spring.application.name}.yml
-          group: ${spring.application.name}
-          refresh: true
-        ext-config[1]:
+        server-addr: 127.0.0.1:8848
+        namespace: 2a5d3ccd-d57a-4ef2-b702-60f7b2ba510b
+        group: ${spring.application.name}
+        prefix: ${spring.application.name}
+        refresh-enabled: true
+        extension-configs[0]:
           data-id: ${spring.application.name}-mysql.yml
           group: ${spring.application.name}
-          refresh: true
-        ext-config[2]:
+        extension-configs[1]:
           data-id: ${spring.application.name}-redis.yml
           group: ${spring.application.name}
-          refresh: true
+      discovery:
+        namespace: 2a5d3ccd-d57a-4ef2-b702-60f7b2ba510b
+        server-addr: 127.0.0.1:8848
+        metadata:
+          version: 1.0.0
     sentinel:
       transport:
-        dashboard:
----
-spring:
-  profiles: prd
-  cloud:
-    nacos:
-      config:
-        file-extension: yaml
-        server-addr: 192.168.137.100:8848,192.168.137.100:8849,192.168.137.100:8850
-        namespace: 76c05fec-31cb-4c9d-a97b-cbabbbb7c56b
-        ext-config[0]:
-          data-id: ${spring.application.name}.yml
-          group: ${spring.application.name}
-          refresh: true
-        ext-config[1]:
-          data-id: ${spring.application.name}-mysql.yml
-          group: ${spring.application.name}
-          refresh: true
-        ext-config[2]:
-          data-id: ${spring.application.name}-redis.yml
-          group: ${spring.application.name}
-          refresh: true
+        dashboard: 127.0.0.1:7200
+      datasource:
+        nacos:
+          namespace: 2a5d3ccd-d57a-4ef2-b702-60f7b2ba510b
+          server-addr: 127.0.0.1:8848
+          dataId: sentinel.json
+          groupId: sentinel
+          ruleType: flow
