--- a/spring-cloud-learn-user/spring-cloud-learn-user-microservice-server/src/main/resources/bootstrap.yml
+++ b/spring-cloud-learn-user/spring-cloud-learn-user-microservice-server/src/main/resources/bootstrap.yml
@@ -1,19 +1,19 @@
 spring:
   application:
-    name: spring-cloud-learn-user-microservice-server-provider
+    name: user-microservice-provider
 server:
   port: 10000
 logging:
   config: classpath:logback.xml
 ---
 spring:
-  profiles: test
+  profiles: local
   cloud:
     nacos:
       config:
-        file-extension: yaml
+        file-extension: yml
         server-addr: 127.0.0.1:8848
-        namespace: 2a5d3ccd-d57a-4ef2-b702-60f7b2ba510b
+        namespace: nahsshan
         group: ${spring.application.name}
         prefix: ${spring.application.name}
         refresh-enabled: true
@@ -24,7 +24,7 @@ spring:
           data-id: ${spring.application.name}-redis.yml
           group: ${spring.application.name}
       discovery:
-        namespace: 2a5d3ccd-d57a-4ef2-b702-60f7b2ba510b
+        namespace: nahsshan
         server-addr: 127.0.0.1:8848
         metadata:
           version: 1.0.0
@@ -32,9 +32,11 @@ spring:
       transport:
         dashboard: 127.0.0.1:7200
       datasource:
-        nacos:
-          namespace: 2a5d3ccd-d57a-4ef2-b702-60f7b2ba510b
-          server-addr: 127.0.0.1:8848
-          dataId: sentinel.json
-          groupId: sentinel
-          ruleType: flow
+        ds:
+          nacos:
+            file-extension: json
+            namespace: nahsshan
+            server-addr: 127.0.0.1:8848
+            dataId: ${spring.application.name}-sentinel.json
+            groupId: ${spring.application.name}
+            ruleType: flow
